--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ coil = "2.7.0"
 constraintlayoutComposeVersion = "1.0.1"
 datastorePreferences = "1.1.1"
 gson = "2.11.0"
-kotlin = "1.9.0"
+kotlin = "1.9.21"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -20,6 +20,7 @@ logger = "2.2.0"
 material = "1.12.0"
 datastoreCoreAndroid = "1.1.1"
 billingKtx = "7.0.0"
+net = "3.5.6"
 
 [libraries]
 accompanist-permissions = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanistPermissions" }
@@ -54,6 +55,7 @@ logger = { module = "com.orhanobut:logger", version.ref = "logger" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastoreCoreAndroid" }
 billing-ktx = { group = "com.android.billingclient", name = "billing-ktx", version.ref = "billingKtx" }
+net = { module = "com.github.liangjingkanji:Net", version.ref = "net" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
